# white_horse_tables

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: docs.yml
old/wh_api/src/: lib.rs
old/wh_api/src/import/square/: lib.rs
old/wh_converter/: Cargo.toml
old/wh_converter/src/tests/: error_tester.rs
old/wh_shared_lib/src/: lib.rs
old/wh_shared_lib/src/import/: mod.rs
resources/small-copies/: Square - items-2024-07-15-2024-08-09.csv  Tickera - Attendee List (24).csv  WooCommerce - wc-orders-report-export-17232178944415.csv  test.csv
resources/source_files/: Square - items-2024-07-15-2024-08-09.csv  Tickera - Attendee List (24).csv  WooCommerce - wc-orders-report-export-17232178944415.csv
source_files/: csvs.tar
src/: config.rs  main.rs  utils.rs
src/errors/: mod.rs
src/import/: lib.rs  mod.rs
src/import/square/: lib.rs  mod.rs
src/importers/: mod.rs  square.rs
src/tests/: mod.rs  util_tester.rs
src/tests/import/: lib_tester.rs  mod.rs
wh_api/: Cargo.toml
wh_api/src/import/: mod.rs
wh_converter/: Cargo.toml
wh_converter/src/: error.rs  exits.rs  main.rs  prelude.rs  utils.rs
wh_converter/src/tests/: exits_tester.rs  mod.rs  utils_tester.rs
wh_shared_lib/: Cargo.toml
wh_shared_lib/src/: tests.rs
